[workspace]
  members = [
    "crates/common",
    "crates/allocator",

    "packages/humanize",
    "packages/i18n",
    "packages/security",
  ]
  resolver = '2'

  [workspace.dependencies]
    common = { path = "crates/common" }
    global_allocator = { path = "crates/allocator" }
    # napi
    napi = "2.16.9"
    napi-derive = "2.16.11"
    napi-build = "2.1.3"

    aes = "0.8.4"
    ctr = "0.9.2"
    dashmap = "6.0.1"
    glob = "0.3.1"
    hex = "0.4.3"
    lazy_static = "1.5.0"
    mimalloc-rust = "0.2.1"
    regex = "1.10.6"
    serde = "1.0.208"
    serde_json = "1.0.127"
    serde_yml = "0.0.11"
    # some times, need feature "disable_initial_exec_tls"
    tikv-jemallocator = "0.6.0"
    toml = "0.8.19"

[profile.release]
  lto = true
  strip = "symbols"
  codegen-units = 1
  overflow-checks = false
