[workspace]
  members = [
    "crates/napi_common",
    "crates/napi_allocator",

    "packages/humanize",
    "packages/i18n",
    "packages/security",
    "packages/sqlite3",
  ]
  resolver = '2'

  [workspace.dependencies]
    napi_common = { path = "crates/napi_common" }
    napi_allocator = { path = "crates/napi_allocator" }
    # napi
    napi = "2.16.9"
    napi-derive = "2.16.11"
    napi-build = "2.1.3"

    aes = "0.8.4"
    ctr = "0.9.2"
    dashmap = "6.0.1"
    glob = "0.3.1"
    hex = "0.4.3"
    lazy_static = "1.5.0"
    mimalloc-rust = "0.2.1"
    regex = "1.10.6"
    rusqlite = { version = "0.32.1", features = ["bundled"] }
    serde = { version = "1.0.208", features = ["derive"] }
    serde_json = "1.0.127"
    serde_yml = "0.0.12"
    # Sometimes, need feature "disable_initial_exec_tls"
    tikv-jemallocator = { version = "0.6.0", features = ["disable_initial_exec_tls"] }
    toml = "0.8.19"

[profile.release]
  lto = true
  strip = "symbols"
  codegen-units = 1
  overflow-checks = false
